# Notes

BasicAdvancedOrders/: advanced_orders.mmd  note.md
FIX/: ExecType.h  MsgType.h
FixedPoint/: CMakeLists.txt  Makefile  benchmark.cpp  example.cpp  fixedpoint.cpp  fixedpoint.h  test_fixedpoint.cpp
GoogleAppsScript/StockPrice/: StockPrice.js
LatencyDashboard/: .gitignore  README.md  docker-compose.yml  init.sql  package.json  server.js
LatencyDashboard/public/: heatmap.html  index.html
LatencyDashboard/scripts/: README.md
LatencyDashboard/scripts/data/: generate_data.js
LatencyDashboard/scripts/utils/: clear_data.sh  db_status.sh  load_data.sh
MarketReplayService/: market_replay_service_architecture.mmd
MessageBrokerMonitor/: docker-compose.yml  prometheus.yml  targets.yml
MessageBrokerMonitor/rules/: smokeping.rules.yml
MyFinanceAPI/: apis.md  order_status.mmd
SortSymbol/: SortFutureSymbol.cpp  SortOptionSymbol.cpp
Suricata/: docker-compose.yml  suricata.yaml
TickDataRecord/: schema.md
